# MyRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  canvas.hpp  model.hpp
src/: camera.cpp  canvas.cpp  main.cpp  model.cpp
